--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -35,10 +35,11 @@ $bold: 700;
 $title-black: #1d1d20;
 $black: #333;
 $white: #fff;
-$dark-blue: #01b5bf;
+$dark-blue: #00CED6;
 $light-blue: #daf4f6;
 $gray: #fafafa;
 $red: #ff0000;
+$background-color:#222;
 body {
-  background-color:$white;
+  background-color:$background-color;
 }
