--- a/src/sass/module/_linkButton.scss
+++ b/src/sass/module/_linkButton.scss
@@ -8,7 +8,7 @@
   font-family: $base-font-family;
   font-weight: $bold;
   color: $white;
-  background-color: $dark-blue;
+  background-color: #01B5BF;
   border-radius: 35px;
   // padding: 0 rem(35.5);
   text-align: center;
