--- a/src/sass/module/_pc-nav.scss
+++ b/src/sass/module/_pc-nav.scss
@@ -38,12 +38,12 @@
 
 .pc-nav__item--download {
   padding: 0 rem(36);
-  font-size: rem(13);
-  line-height: calc(13 / 13);
+  font-size: rem(17);
+  line-height: calc(17 / 17);
   letter-spacing: rem(2);
   height: rem(45);
   background-color: $dark-blue;
-  color: $white;
+  color: $black;
   transition: background-color 0.3s ease;
   border-radius: rem(25);
   margin-left: rem(15);
