--- a/src/sass/module/_hamburger.scss
+++ b/src/sass/module/_hamburger.scss
@@ -19,7 +19,7 @@
   position: absolute;
   width: 100%;
   height: 2px;
-  background: $black;
+  background: $dark-blue;
   -webkit-transition: 0.3s ease-in-out;
   -moz-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
