--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -7,8 +7,12 @@
   width: 100%;
   // border: 1px solid rgba(17, 17, 17, 0);
   transition: all 0.6s ease;
-  background-color: $white;
+  // background-color: $white;
+  transition: background-color 0.3s;
   z-index: 9999;
+}
+.header.active {
+  background-color: $background-color;
 }
 
 .header__inner {
@@ -55,12 +59,12 @@
     width: 100%;
     // border: 1px solid rgba(17, 17, 17, 0);
     transition: all 0.6s ease;
-    background-color: $white;
+    // background-color: $white;
     z-index: 9999;
   }
 
   .header__inner {
-    height: 60px;
+    height: 40px;
     padding: 0 $padding-sp;
   }
 
@@ -71,7 +75,7 @@
   }
 
   .header__logo {
-    max-width: rem(150);
+    max-width: rem(95.21);
   }
 
   .header__hamburger {
