--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -33,7 +33,7 @@
 }
 
 .header__inner.active {
-  background-color: $gray;
+  background-color: $background-color;
   // border: 1px solid #000;
 }
 
