--- a/src/sass/module/_sp-nav.scss
+++ b/src/sass/module/_sp-nav.scss
@@ -6,8 +6,8 @@
   top: 0;
   // left: 0;
   right: -100%;
-  color: #fff;
-  background-color: $gray;
+  color: $dark-blue;
+  background-color: $background-color;
   // text-align: center;
   width: 100%;
   height: 100vh;
@@ -16,10 +16,13 @@
   // display: flex;
   // justify-content: center;
   // align-items: center;
-  margin-top: 40px;
+  margin-top: 80px;
   overflow: scroll; /* スクロールを有効にする */
   z-index: 9999;
   padding: rem(30) 0 rem(100);
+  @include mq("md") {
+    margin-top: 40px;
+  }
 }
 @include mq("header_bp") {
   .sp-nav {
@@ -54,7 +57,7 @@
   letter-spacing: 0.002;
   font-family: $base-font-family;
   font-weight: $regular;
-  color: $title-black;
+  // color: $title-black;
   display: block;
   padding: 1em 0;
   text-decoration: none;
